Aligned icons to top, styled arrow pager, fixed issue with pager showing multiple times

--- a/wp-content/themes/guny/assets/styleguide/_icons.scss
+++ b/wp-content/themes/guny/assets/styleguide/_icons.scss
@@ -26,11 +26,13 @@
 .icon--xsmall {
   height: 1em;
   width: 1em;
+  vertical-align: top;
 }
 
 .icon--xxsmall {
   height: rem-calc(13);
   width: rem-calc(13);
+  vertical-align: top;
 
   @include media($bp-small) {
     height: rem-calc(15);
